# advent-of-code

./: .envrc  .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
2015/day-01/: Cargo.toml
2015/day-03/: Cargo.toml
2015/day-04/: Cargo.toml
2015/day-05/: Cargo.toml
2015/day-07/: Cargo.toml
2015/day-08/: Cargo.toml
2015/day-1/: Cargo.toml
2015/day-3/: Cargo.toml
2015/day-4/: Cargo.toml
2015/day-5/: Cargo.toml
2015/day-6/: Cargo.toml
2015/day-7/: Cargo.toml
2015/day-8/: Cargo.toml
2018/: Cargo.toml
2018/day-02/: Cargo.toml
2018/day-03/: Cargo.toml
2018/day-04/: Cargo.toml
2018/day-05/: Cargo.toml
2018/day-06/: Cargo.toml
2018/day-07/: Cargo.toml
2018/day-08/: Cargo.toml
2018/day-09/: Cargo.toml
2018/day-10/: Cargo.toml
2018/day-11/: Cargo.toml
2018/day-13/: Cargo.toml
2018/day-14/: Cargo.toml
2018/day-16/: Cargo.toml
2018/day-18/: Cargo.toml
2018/day-19/: Cargo.toml
2018/day-2/: Cargo.toml
2018/day-3/: Cargo.toml
2018/day-4/: Cargo.toml
2018/day-5/: Cargo.toml
2018/day-8/: Cargo.toml
aoc/: Cargo.toml
aoc-15/: Cargo.toml
aoc-15/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-16/: Cargo.toml
aoc-16/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  lib.rs
aoc-17/: Cargo.toml
aoc-17/input/: 02.txt
aoc-17/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  lib.rs  main.rs
aoc-18/: Cargo.toml
aoc-18/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  lib.rs
aoc-19/: Cargo.toml
aoc-19/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-20/: Cargo.toml
aoc-20/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-21/: Cargo.toml
aoc-21/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-22/: Cargo.toml
aoc-22/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
aoc-23/: Cargo.toml
aoc-23/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  lib.rs
aoc-24/: Cargo.toml
aoc-24/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  lib.rs  (+6 more)
aoc-core/: Cargo.toml
aoc-core/src/: grid.rs  intcode.rs  lib.rs  parse.rs  traits.rs  types.rs  util.rs
aoc/src/: api.rs  cache.rs  leaderboard.rs  lib.rs  main.rs  markdown.rs  parse.rs  template.rs  types.rs
(+59 files in other folders)
