[package]
name = "aoc-20"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { package = "aoc-core", path = "../aoc-core" }
priority-queue = "1.0"
petgraph = "0.5"
regex = "1.4"
