[package]
name = "aoc-20"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { package = "aoc-core", path = "../aoc-core" }
indexmap = "1.6"
priority-queue = "1.2"
petgraph = "0.5"
regex = "1.4"
ring-algorithm = "0.2"
