[package]
name = "aoc"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc-core = { path = "../aoc-core" }
aoc-15 = { path = "../aoc-15" }
aoc-17 = { path = "../aoc-17" }
aoc-19 = { path = "../aoc-19" }
dirs = { version = "2.0", package = "directories-next" }
ego-tree = "0.6"
html = { version = "0.25", package = "html5ever" }
json = { version = "1.0", package = "serde_json" }
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
