[package]
name = "aoc"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aoc-core = { path = "../aoc-core" }
aoc-15 = { path = "../aoc-15" }
aoc-16 = { path = "../aoc-16" }
aoc-17 = { path = "../aoc-17" }
aoc-18 = { path = "../aoc-18" }
aoc-19 = { path = "../aoc-19" }
aoc-20 = { path = "../aoc-20" }
aoc-21 = { path = "../aoc-21" }
aoc-22 = { path = "../aoc-22" }
chrono = "0.4"
dirs = { version = "2.0", package = "directories-next" }
ego-tree = "0.6"
env_logger = "0.8"
html = { version = "0.25", package = "html5ever" }
json = { version = "1.0", package = "serde_json" }
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
